plugins/editorconfig/testData/org/editorconfig/language/parser/invalid/malformedVariantWithoutComas.editorconfig
[hello{.kt .kts}]
key=value
